change name of file

--- a/beachbod.html
+++ b/beachbod.html
@@ -21,7 +21,7 @@
 
   <section class="blog container">
     <div class="beachBod-intro">
-      <div style="background-image: url('/src/Images/gym.jpg);">
+      <div style="background-image: url('/src/images/gym.jpg);">
         <h1 class="beachBod-intro__title">Beach Bod Basics</h1>
         <div class="beachBod-intro__text">
           <p>So today im going to keep it short and sweet and give you a few simple (but effective) facts for building that Greek God bod!
@@ -33,7 +33,7 @@
 
     <div class="paragraph clearfix">
       <h4 class="paragraph__title">First and Foremost:</h4>
-      <img src="Images/weights.jpg" alt="weights" class="paragraph__img paragraph__img--right">
+      <img src="images/weights.jpg" alt="weights" class="paragraph__img paragraph__img--right">
       <div class="paragraph__text paragraph__text--left">
         <strong>Increase your lifting weight!</strong> You should strive to add more weight to the bar/machine/dumbells, etc.. each week.
         I can't stress the importance of this! Even if it’s the smallest of increases, you’re still adding on more weight which will lead to progressive overload.
@@ -43,7 +43,7 @@
 
     <div class="paragraph clearfix">
       <h4 class="paragraph__title">Secondly..</h4>
-      <img src="Images/increase_reps.jpg" alt="Increasing Reps" class="paragraph__img paragraph__img--left">
+      <img src="images/increase_reps.jpg" alt="Increasing Reps" class="paragraph__img paragraph__img--left">
       <div class="paragraph__text paragraph__text--right">
         <strong>Increase your reps!</strong> You’ll be happy to hear this.. you don’t always <strong>need</strong> to increase weight! Another great way you can progress is by
         increasing the number of reps per set. So say for example if you’ve been going 3 sets of 10 for a while now, increase it to 3 sets of 12, and BAM!
@@ -53,7 +53,7 @@
 
     <div class="paragraph clearfix">
       <h4 class="paragraph__title">Thirdly..</h4>
-      <img src="Images/technique.jpg" alt="improving technique" class="paragraph__img paragraph__img--right">
+      <img src="images/technique.jpg" alt="improving technique" class="paragraph__img paragraph__img--right">
       <div class="paragraph__text paragraph__text--left">
         <strong>Improve technique!</strong>This is another really good form of progressive overload, especially if you want to make sure you continue using the right
         muscle groups and prevent injury! Your form needs to be picture perfect before you can increase weight on all movements. A good que I like to use is the last rep of
