--- a/calculator.html
+++ b/calculator.html
@@ -43,7 +43,7 @@
           </div>
         </div>
         <div class="col col-6-md">
-          <img class="calculator__img" src="Images/scales.jpg" alt="weighing scales">
+          <img class="calculator__img" src="images/scales.jpg" alt="weighing scales">
         </div>
       </div>
     </div>
