--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-12 col-3-md">
         <a href="/" class="footer__logo">
-          <img class="footer__logo-img" src="./Images/logo.svg" alt="logo">
+          <img class="footer__logo-img" src="./images/logo.svg" alt="logo">
         </a>
       </div>
       <div class="col-12 col-3-md">
