--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
   <div class="js-navbar navbar">
     <div class="navbar__header">
       <a href="/" class="navbar__logo">
-        <img class="navbar__logo-img" src="./Images/logo.svg" alt="logo">
+        <img class="navbar__logo-img" src="./images/logo.svg" alt="logo">
         <small class="navbar__logo-text" >You are what you eat!</small>
       </a>
       <span href="javascript:void(0);" class="navbar__button" onclick="myFunction()">
