--- a/leaneating.html
+++ b/leaneating.html
@@ -28,7 +28,7 @@
 
     <div class="paragraph clearfix">
       <h4 class="paragraph__title">1. Eat the RIGHT Type of Carbs</h4>
-      <img src="Images/fruitveg.jpg" alt="green fruit and veg" class="paragraph__img paragraph__img--right">
+      <img src="images/fruitveg.jpg" alt="green fruit and veg" class="paragraph__img paragraph__img--right">
       <div class="paragraph__text paragraph__text--left">
         There is a confusion around which carbs have a place in a lean diet and which carbs will only make you gain weight.
         The success of your eating plan depends a lot on which of these carbs you regularly include in your diet:
@@ -47,7 +47,7 @@
 
     <div class="paragraph clearfix">
       <h4 class="paragraph__title">2. Track What You Eat</h4>
-      <img src="Images/fitnesstracker.jpg" alt="smartwatch" class="paragraph__img paragraph__img--left">
+      <img src="images/fitnesstracker.jpg" alt="smartwatch" class="paragraph__img paragraph__img--left">
       <div class="paragraph__text paragraph__text--right">The only way to improve upon your diet is to actually know what you're currently eating. Keep a food journal, or download a free food tracker app(my fitness pal),
         and track the calories that you have over the course of a week. This will give you a broad look at where your low quality calories are coming from (high sugar, empty calories).
         Your first step will be to eliminate these fattening calories and to start replacing empty calories with nutrient-filled whole foods.
@@ -64,7 +64,7 @@
 
     <div class="paragraph clearfix">
       <h4 class="paragraph__title">4. Never Restrict Calories to the Extreme</h4>
-      <img src="Images/baddiet.jpg" alt="poor diet" class="paragraph__img paragraph__img--right">
+      <img src="images/baddiet.jpg" alt="poor diet" class="paragraph__img paragraph__img--right">
       <div class="paragraph__text paragraph__text--left">
         There's a certain trend going on in temporarily restricting calories to the extreme. The idea that one can drop a down a size or two in just as many weeks is quite tempting.
         I hate to be the one to burst your overambitious bubble, but extreme calorie restriction NEVER WORKS. It's terrible for your body and it is not something that is sustainable
@@ -76,7 +76,7 @@
 
     <div class="paragraph clearfix">
       <h4 class="paragraph__title">5. Eat Veggies First</h4>
-      <img src="Images/veggiesfirst.jpg" alt="vegetables" class="paragraph__img paragraph__img--left">
+      <img src="images/veggiesfirst.jpg" alt="vegetables" class="paragraph__img paragraph__img--left">
       <div class="paragraph__text paragraph__text--right">
         This may go against all of your instincts, but hear this one out. When you sit down to a meal first eat all of the veggies and salad, before moving on to the main meal.
         This simple strategy helps to fill you up with lower calorie foods first, before moving on to the higher calorie items. By making this a habit you'll naturally and effortlessly consume fewer
@@ -86,7 +86,7 @@
 
     <div class="paragraph clearfix">
       <h4 class="paragraph__title">6. Include Protein at Every Meal</h4>
-      <img src="Images/proteinimage.jpg" alt="protein" class="paragraph__img paragraph__img--right">
+      <img src="images/proteinimage.jpg" alt="protein" class="paragraph__img paragraph__img--right">
       <div class="paragraph__text paragraph__text--left">
         Each of your meals should be built around a healthy serving of protein. This protein could be meat (chicken breast, fish fillet, roasted turkey, lean beef etc..), or a meat substitute
         (tofu, quorn, jackfruit, etc..) eggs, or protein powder. Having protein as the focus point of your meal is important for two reasons:
@@ -99,7 +99,7 @@
 
     <div class="paragraph clearfix">
       <h4 class="paragraph__title">7. Ban Liquid Calories</h4>
-      <img src="Images/nofizzies.jpg" alt="Fizzy Drink" class="paragraph__img paragraph__img--left">
+      <img src="images/nofizzies.jpg" alt="Fizzy Drink" class="paragraph__img paragraph__img--left">
       <div class="paragraph__text paragraph__text--right">
         Liquid calories have no place in a lean eating plan. No place at all. Anytime that you are drinking calories, it's safe to assume that you're adding inches to your waistline.
         Put down the beer, just say no to the blended coffee drink, and forget about fizzy drinks. Put down the beer, just say no to the blended coffee drink, and forget about fizzy drinks.
