--- a/recepies.html
+++ b/recepies.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/animated-icons/icons/stop/stop.json">
   <script type="text/javascript" src="js/script.js"></script>
   <link rel="stylesheet" href="./font-awesome-animation.min.css">
-  <title>Recepies</title>
+  <title>Recipes</title>
 </head>
 
 <body>
@@ -36,14 +36,15 @@
     </div>
   </navbar>
   <br><br><br><br>
-  <span class="go_up"></span>
+ <!-- <span class="go_up"></span> -->
+    <button type="button" class="go_up">Go up</button>
 
   <section class="recipesSection hero">
     <div class="container">
       <div class="hero__wrapper">
         <div class="row">
           <div class="col-12">
-            <h2 class="hero__title">Recepies</h2>
+            <h2 class="hero__title">Recipes</h2>
           </div>
         </div>
         <div class="row" id="recepies_up">
@@ -126,13 +127,13 @@
           <div class="dietRecipes__list">
             <ul>
               <li>
-                <a href="recepie.html" class="dietType__link">Mushroom-Quinoa Buger</a>
+                <a href="recepie.html" class="dietRecipes__link">Mushroom-Quinoa Buger</a>
               </li>
               <li>
-                <a class="dietType__link">Lorem ipsun</a>
+                <a href="#" class="dietRecipes__link" >Crispy Baked Falafel</a>
               </li>
               <li>
-                <a class="dietType__link">Lorem ipsun</a>
+                <a href="#" class="dietRecipes__link" >Pinto Posole</a>
               </li>
             </ul>
           </div>
@@ -154,13 +155,13 @@
           <div class="dietRecipes__list">
             <ul>
               <li>
-                <a>Lorem ipsun</a>
+                <a href="#" class="dietRecipes__link" >Tofu Pad Thai</a>
               </li>
               <li>
-                <a>Lorem ipsun</a>
+                <a href="#" class="dietRecipes__link" >Vegan Gravy</a>
               </li>
               <li>
-                <a>Lorem ipsun</a>
+                <a href="#" class="dietRecipes__link" >Rainbow Veggie Kabobs</a>
               </li>
             </ul>
           </div>
@@ -182,13 +183,13 @@
           <div class="dietRecipes__list">
             <ul>
               <li>
-                <a>Lorem ipsun</a>
+                <a href="#" class="dietRecipes__link" >Barbecued meatball kebabs </a>
               </li>
               <li>
-                <a>Lorem ipsun</a>
+                <a href="#" class="dietRecipes__link" >Quinoa tabbouleh </a>
               </li>
               <li>
-                <a>Lorem ipsun</a>
+                <a href="#" class="dietRecipes__link" >Lemon drizzle cake </a>
               </li>
             </ul>
           </div>
@@ -210,13 +211,13 @@
           <div class="dietRecipes__list">
             <ul>
               <li>
-                <a>Lorem ipsun</a>
+                <a href="#" class="dietRecipes__link" >Thai squash soup </a>
               </li>
               <li>
-                <a>Lorem ipsun</a>
+                <a href="#" class="dietRecipes__link" >Easy ratatouille with poached eggs </a>
               </li>
               <li>
-                <a>Lorem ipsun</a>
+                <a href="#" class="dietRecipes__link" >Tuna steaks with cucumber relish </a>
               </li>
             </ul>
           </div>
@@ -238,13 +239,13 @@
           <div class="dietRecipes__list">
             <ul>
               <li>
-                <a>Lorem ipsun</a>
+                <a href="#" class="dietRecipes__link" >Fish tacos</a>
               </li>
               <li>
-                <a>Lorem ipsun</a>
+                <a href="#" class="dietRecipes__link" >Coconut fish curry</a>
               </li>
               <li>
-                <a>Lorem ipsun</a>
+                <a href="#" class="dietRecipes__link" >Creamy courgette lasagne </a>
               </li>
             </ul>
           </div>
@@ -266,13 +267,13 @@
           <div class="dietRecipes__list">
             <ul>
               <li>
-                <a>Lorem ipsun</a>
+                <a href="#" class="dietRecipes__link" >Beef Bone Broth</a>
               </li>
               <li>
-                <a>Lorem ipsun</a>
+                <a href="#" class="dietRecipes__link" >Fire Cider Tonic</a>
               </li>
               <li>
-                <a>Lorem ipsun</a>
+                <a href="#" class="dietRecipes__link" >Golden Milk Turmeric Tea</a>
               </li>
             </ul>
           </div>
