--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
           <div class="contact__text">
             <h1 class="contact__title">Contact Us</h1>
             <p> If you have any questions or helpful tips please feel free to contact us by filling out the form below,
-              we will respond as soon as we can!
+              we will respond as soon as we can! hello
             </p>
             <form class="form" action="action_page.php">
               <label for="fname">Full Name:</label>
