--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="col-12">
             <div class="homeHero__right">
               <div class="homeHero__img-wrapper">
-                <img class="homeHero__img" src="/images/breakfast_full.jpg" alt="sandwich">
+                <img class="homeHero__img" src="images/breakfast_full.jpg" alt="sandwich">
               </div>
             </div>
           </div>
