--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@
   </section>
 
   <section class="imagesRoll">
-    <img class="imagesRoll__img" src="/images/avocado.jpg" alt="avocado">
-    <img class="imagesRoll__img" src="/images/berries.jpg" alt="berries">
-    <img class="imagesRoll__img" src="/images/carrot.jpg" alt="carrot">
-    <img class="imagesRoll__img" src="/images/kiwi.jpg" alt="kiwi">
-    <img class="imagesRoll__img" src="/images/orange.jpg" alt="orange">
-    <img class="imagesRoll__img" src="/images/apples.jpg" alt="apples">
-    <img class="imagesRoll__img" src="/images/bananas.jpg" alt="bananas">
-    <img class="imagesRoll__img" src="/images/parsley.jpg" alt="parsley">
+    <img class="imagesRoll__img" src="images/avocado.jpg" alt="avocado">
+    <img class="imagesRoll__img" src="images/berries.jpg" alt="berries">
+    <img class="imagesRoll__img" src="images/carrot.jpg" alt="carrot">
+    <img class="imagesRoll__img" src="images/kiwi.jpg" alt="kiwi">
+    <img class="imagesRoll__img" src="images/orange.jpg" alt="orange">
+    <img class="imagesRoll__img" src="images/apples.jpg" alt="apples">
+    <img class="imagesRoll__img" src="images/bananas.jpg" alt="bananas">
+    <img class="imagesRoll__img" src="images/parsley.jpg" alt="parsley">
   </section>
 
   <section class="homeSection homeSection--third three-block">
