--- a/beachbod.html
+++ b/beachbod.html
@@ -21,7 +21,7 @@
 
   <section class="blog container">
     <div class="beachBod-intro">
-      <div style="background-image: url('/src/images/gym.jpg);">
+      <div style="background-image: url('images/gym.jpg);">
         <h1 class="beachBod-intro__title">Beach Bod Basics</h1>
         <div class="beachBod-intro__text">
           <p>So today im going to keep it short and sweet and give you a few simple (but effective) facts for building that Greek God bod!
