logo leads to homepage

--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <navbar>
   <div class="js-navbar navbar">
     <div class="navbar__header">
-      <a href="/" class="navbar__logo">
+      <a href="index.html" class="navbar__logo">
         <img class="navbar__logo-img" src="./images/logo.svg" alt="logo">
         <small class="navbar__logo-text" >You are what you eat!</small>
       </a>
