--- a/beachbod.html
+++ b/beachbod.html
@@ -24,7 +24,7 @@
       <div class="blog__bg">
         <h1 class="beachBod-intro__title">Beach Bod Basics</h1>
         <div class="beachBod-intro__text">
-          <p>Ola today im going to keep it short and sweet and give you a few simple (but effective) facts for building that Greek God bod!
+          <p>So today im going to keep it short and sweet and give you a few simple (but effective) facts for building that Greek God bod!
             By following this approach you’ll not only sky rocket your metabolism but you'll also increase your resting heart rate and burn twice as many calories in a day,
             leading to that perfect beach bod!
         </div>
