linked form on contact page to link to my email

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
             <p> If you have any questions or helpful tips please feel free to contact us by filling out the form below,
               we will respond as soon as we can!
             </p>
-            <form class="form" action="action_page.php">
+            <form method="POST" class="form" action="https://formspree.io/x19140118@student.ncirl.ie">
               <label for="fname">Full Name:</label>
               <input class="form__input" type="text" id="fname" name="fullname" placeholder="Your full name">
 
