--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="col-12">
             <div class="hero__left">
               <h1 class="hero__title">You are what you eat!</h1>
-              <a class="homeHero__button" href="/about.html">
+              <a class="homeHero__button" href="/recipes.html">
                 Get some food <i class="homeHero__button-icon fas fa-hamburger faa-burst animated-hover"></i>
               </a>
             </div>
@@ -52,7 +52,7 @@
           </div>
           <div class="intro__diets">
             <div class="row">
-              <a href="#" class="intro__link">
+              <a href="recipes.html#gluFreeRece" class="intro__link">
                 <div class="col-6 col-4-md">
                   <div class="intro__diet">
                     <img src="images/icons/no-gluten.png" alt="" class="intro__diet-icon">
@@ -60,7 +60,7 @@
                   </div>
                 </div>
               </a>
-              <a href="#" class="intro__link">
+              <a href="recipes.html#veganRece" class="intro__link">
                 <div class="col-6 col-4-md">
                   <div class="intro__diet">
                     <img src="images/icons/vegan.png" alt="" class="intro__diet-icon">
@@ -68,7 +68,7 @@
                   </div>
                 </div>
               </a>
-              <a href="#" class="intro__link">
+              <a href="recipes.html#vegetarianRece" class="intro__link">
                 <div class="col-6 col-4-md">
                   <div class="intro__diet">
                     <img src="images/icons/vegetarian-diet.png" alt="" class="intro__diet-icon">
@@ -76,7 +76,7 @@
                   </div>
                 </div>
               </a>
-              <a href="#" class="intro__link">
+              <a href="recipes.html#paleoRece" class="intro__link">
                 <div class="col-6 col-4-md">
                   <div class="intro__diet">
                     <img src="images/icons/paleo.png" alt="" class="intro__diet-icon">
@@ -84,7 +84,7 @@
                   </div>
                 </div>
               </a>
-              <a href="#" class="intro__link">
+              <a href="recipes.html#pesceRece" class="intro__link">
                 <div class="col-6 col-4-md">
                   <div class="intro__diet">
                     <img src="images/icons/pescetarian.png" alt="" class="intro__diet-icon">
@@ -92,7 +92,7 @@
                   </div>
                 </div>
               </a>
-              <a href="#" class="intro__link">
+              <a href="recipes.html#detoxRece" class="intro__link">
                 <div class="col-6 col-4-md">
                   <div class="intro__diet">
                     <img src="images/icons/detox.png" alt="" class="intro__diet-icon">
@@ -132,8 +132,7 @@
             <div class="three-block__box three-block__box--second">
               <h3 class="three-block__subtitle">Kitchen Staples</h3>
               <p class="three-block__text">
-                Eat vegetables, preferably seasonal. Raw and warm. You can combine them with protein or carbohydrates. They should occupy most of your plate. To find out what’s harvested seasonally in your area, go to <a href="www.localharvest.org"
-                  target="_blank"> www.localharvest.org </a>to find farmers’ markets near you and seasonal produce guides.
+                Right now, there is more awareness than ever before around health and fitness. People have become more educated on the dangers of unhealthy eating and poor fitness levels. With that, people have taken action to take better care of themselves.
               </p>
               <a class="three-block__btn" href="staples.html" name="button">Read more...</a>
             </div>
