--- a/recipe.html
+++ b/recipe.html
@@ -4,36 +4,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="css/styles.css">
-  <script src="https://kit.fontawesome.com/f45d831e1a.js" crossorigin="anonymous"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Prompt:400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/animated-icons/icons/stop/stop.json">
-  <script type="text/javascript" src="js/script.js"></script>
-  <link rel="stylesheet" href="./font-awesome-animation.min.css">
-  <title>Mushroom-Quinoa Burger</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/vendors/font-awesome-animation.min.css">
+  <title>Mushroom-Quinoa Burger | You are what you eat</title>
 </head>
 
 <body>
-  <navbar>
-    <div class="js-navbar navbar">
-      <div class="navbar__header">
-        <a href="#home" class="navbar__logo">LOGO</a>
-        <span href="javascript:void(0);" class="navbar__button" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
-        </span>
-      </div>
-      <div class="navbar__list">
-        <a href="#recipes" class="navbar__link">Recipes</a>
-        <a href="#blog" class="navbar__link">Blog</a>
-        <a href="#calculator" class="navbar__link">Calculator</a>
-        <a href="#contact" class="navbar__link">Contact</a>
-        <a href="#about" class="navbar__link">About</a>
-        <a href="#lifestyle" class="navbar__link">Lifestyle</a>
-      </div>
-    </div>
-  </navbar> <br><br><br>
+  <div id="header">
+  </div>
+  <br><br><br><br>
+  <br><br><br>
 
   <section class="stepbar hero" id="stepbar">
     <div class="row stepbar__position" id="stepbarProgres">
@@ -70,7 +53,7 @@
 
         <div class="row">
           <div col-12>
-            <img class="rece__img" src="Images/recepies/veganburgeropt.gif">
+            <img class="rece__img" src="images/recepies/veganburgeropt.gif">
           </div>
         </div> <!-- rece img -->
       </div>
@@ -167,43 +150,12 @@
 
 
 
+  <div id="footer">
+  </div>
 
-  <footer class="footer">
-    <div class="container footer__container">
-      <div class="row">
-        <div class="col-12 col-3-md">
-          <a href="#home" class="footer__logo">LOGO</a>
-        </div>
-        <div class="col-12 col-3-md">
-          <div class="footer__list">
-            <a href="#recipes" class="footer__link">Recipes</a>
-            <a href="#blog" class="footer__link">Blog</a>
-            <a href="#calculator" class="footer__link">Calculator</a>
-          </div>
-        </div>
-        <div class="col-12 col-3-md">
-          <div class="footer__list">
-            <a href="#about" class="footer__link">About</a>
-            <a href="#lifestyle" class="footer__link">Lifestyle</a>
-            <a href="#contact" class="footer__link">Contact</a>
-          </div>
-        </div>
-        <div class="col-12 col-3-md">
-          <div class="footer__contact-wrapper">
-            <div class="footer__social-media">
-              <i class="fab fa-facebook-f"></i>
-              <i class="fab fa-twitter"></i>
-              <i class="fab fa-pinterest-p"></i>
-            </div>
-            <div class="footer__contact">
-              <p>5 Fitzgerald Street, Harold's Cross,</p>
-              <p>Dublin 6, D08X65 </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
+  <script src="js/vendors/jquery.min.js"></script>
+  <script src="https://kit.fontawesome.com/f45d831e1a.js" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="js/script.js"></script>
 </body>
 
 </html>
