--- a/mythsbusted.html
+++ b/mythsbusted.html
@@ -13,6 +13,37 @@
 </head>
 
 <body>
+
+  <script>
+  // Carla slider
+  var slideIndex = 1;
+  showSlides(slideIndex);
+
+  function currentSlide(n) {
+    showSlides(slideIndex = n);
+  }
+
+  function showSlides(n) {
+    var i;
+    var slides = document.getElementsByClassName("js-mythbusted-slide");
+    console.log(slides);
+    var dots = document.getElementsByClassName("js-mythbusted__dot");
+    if (n > slides.length) {
+      slideIndex = 1
+    }
+    if (n < 1) {
+      slideIndex = slides.length
+    }
+    for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";
+    }
+    for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" mythbusted-slider__dot--active", "");
+    }
+    slides[slideIndex - 1].style.display = "block";
+    dots[slideIndex - 1].className += " mythbusted-slider__dot--active";
+  }
+  </script>
   <div id="header">
   </div>
   <br><br><br><br>
