added document ready

--- a/recipe.html
+++ b/recipe.html
@@ -12,6 +12,7 @@
   <title>Mushroom-Quinoa Burger | You are what you eat</title>
 </head>
 <script>
+$(document).ready(function() {
 $(window).scroll(function() {
   var y = $(window).scrollTop();
   var steps = $('#steps').offset();
@@ -37,6 +38,7 @@ $(window).scroll(function() {
       $('#ingreBtnBr').fadeOut();
     }
   }
+});
 });
 </script>
 <body>
