--- a/mythsbusted.html
+++ b/mythsbusted.html
@@ -14,7 +14,7 @@
 
 <body>
 
-  <script>
+  <!-- <script>
   // Carla slider
   var slideIndex = 1;
   showSlides(slideIndex);
@@ -43,7 +43,7 @@
     slides[slideIndex - 1].style.display = "block";
     dots[slideIndex - 1].className += " mythbusted-slider__dot--active";
   }
-  </script>
+  </script> -->
   <div id="header">
   </div>
   <br><br><br><br>
