--- a/recipe.html
+++ b/recipe.html
@@ -157,6 +157,7 @@
   <script src="https://kit.fontawesome.com/f45d831e1a.js" crossorigin="anonymous"></script>
   <script type="text/javascript" src="js/script.js"></script>
   <script type="text/javascript" src="js/recipe.js"></script>
+  <script></script>
 </body>
 
 </html>
