--- a/recipes.html
+++ b/recipes.html
@@ -107,13 +107,13 @@
           <div class="dietRecipes__list">
             <ul>
               <li>
-                <a href="recipe.html" class="dietRecipes__link">Mushroom-Quinoa Buger</a>
+                <a href="recipee.html" class="dietRecipes__link">Mushroom-Quinoa Buger</a>
               </li>
               <li>
-                <a href="recipe.html" class="dietRecipes__link">Crispy Baked Falafel</a>
+                <a href="recipee.html" class="dietRecipes__link">Crispy Baked Falafel</a>
               </li>
               <li>
-                <a href="recipe.html" class="dietRecipes__link">Pinto Posole</a>
+                <a href="recipee.html" class="dietRecipes__link">Pinto Posole</a>
               </li>
             </ul>
           </div>
@@ -135,13 +135,13 @@
           <div class="dietRecipes__list">
             <ul>
               <li>
-                <a href="recipe.html" class="dietRecipes__link">Tofu Pad Thai</a>
+                <a href="recipee.html" class="dietRecipes__link">Tofu Pad Thai</a>
               </li>
               <li>
-                <a href="recipe.html" class="dietRecipes__link">Vegan Gravy</a>
+                <a href="recipee.html" class="dietRecipes__link">Vegan Gravy</a>
               </li>
               <li>
-                <a href="recipe.html" class="dietRecipes__link">Rainbow Veggie Kabobs</a>
+                <a href="recipee.html" class="dietRecipes__link">Rainbow Veggie Kabobs</a>
               </li>
             </ul>
           </div>
@@ -163,13 +163,13 @@
           <div class="dietRecipes__list">
             <ul>
               <li>
-                <a href="recipe.html" class="dietRecipes__link">Barbecued meatball kebabs </a>
+                <a href="recipee.html" class="dietRecipes__link">Barbecued meatball kebabs </a>
               </li>
               <li>
-                <a href="recipe.html" class="dietRecipes__link">Quinoa tabbouleh </a>
+                <a href="recipee.html" class="dietRecipes__link">Quinoa tabbouleh </a>
               </li>
               <li>
-                <a href="recipe.html" class="dietRecipes__link">Lemon drizzle cake </a>
+                <a href="recipee.html" class="dietRecipes__link">Lemon drizzle cake </a>
               </li>
             </ul>
           </div>
@@ -191,13 +191,13 @@
           <div class="dietRecipes__list">
             <ul>
               <li>
-                <a href="recipe.html" class="dietRecipes__link">Thai squash soup </a>
+                <a href="recipee.html" class="dietRecipes__link">Thai squash soup </a>
               </li>
               <li>
-                <a href="recipe.html" class="dietRecipes__link">Easy ratatouille with poached eggs </a>
+                <a href="recipee.html" class="dietRecipes__link">Easy ratatouille with poached eggs </a>
               </li>
               <li>
-                <a href="recipe.html" class="dietRecipes__link">Tuna steaks with cucumber relish </a>
+                <a href="recipee.html" class="dietRecipes__link">Tuna steaks with cucumber relish </a>
               </li>
             </ul>
           </div>
@@ -219,13 +219,13 @@
           <div class="dietRecipes__list">
             <ul>
               <li>
-                <a href="recipe.html" class="dietRecipes__link">Fish tacos</a>
+                <a href="recipee.html" class="dietRecipes__link">Fish tacos</a>
               </li>
               <li>
-                <a href="recipe.html" class="dietRecipes__link">Coconut fish curry</a>
+                <a href="recipee.html" class="dietRecipes__link">Coconut fish curry</a>
               </li>
               <li>
-                <a href="recipe.html" class="dietRecipes__link">Creamy courgette lasagne </a>
+                <a href="recipee.html" class="dietRecipes__link">Creamy courgette lasagne </a>
               </li>
             </ul>
           </div>
@@ -247,13 +247,13 @@
           <div class="dietRecipes__list">
             <ul>
               <li>
-                <a href="recipe.html" class="dietRecipes__link">Beef Bone Broth</a>
+                <a href="recipee.html" class="dietRecipes__link">Beef Bone Broth</a>
               </li>
               <li>
-                <a href="recipe.html" class="dietRecipes__link">Fire Cider Tonic</a>
+                <a href="recipee.html" class="dietRecipes__link">Fire Cider Tonic</a>
               </li>
               <li>
-                <a href="recipe.html" class="dietRecipes__link">Golden Milk Turmeric Tea</a>
+                <a href="recipee.html" class="dietRecipes__link">Golden Milk Turmeric Tea</a>
               </li>
             </ul>
           </div>
