changed link path

--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,7 @@
       </div>
       <div class="col-12 col-3-md">
         <div class="footer__list">
-          <a href="recipes.html" class="footer__link">Recipes</a>
+          <a href="recipees.html" class="footer__link">Recipes</a>
           <a href="lifestyle.html" class="footer__link">Lifestyle</a>
           <a href="calculator.html" class="footer__link">Calculator</a>
         </div>
