--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="col-12">
             <div class="hero__left">
               <h1 class="hero__title">You are what you eat!</h1>
-              <a class="homeHero__button" href="/recipes.html">
+              <a class="homeHero__button" href="/recipees.html">
                 Get some food <i class="homeHero__button-icon fas fa-hamburger faa-burst animated-hover"></i>
               </a>
             </div>
@@ -52,7 +52,7 @@
           </div>
           <div class="intro__diets">
             <div class="row">
-              <a href="recipes.html#gluFreeRece" class="intro__link">
+              <a href="recipees.html#gluFreeRece" class="intro__link">
                 <div class="col-6 col-4-md">
                   <div class="intro__diet">
                     <img src="images/icons/no-gluten.png" alt="" class="intro__diet-icon">
@@ -60,7 +60,7 @@
                   </div>
                 </div>
               </a>
-              <a href="recipes.html#veganRece" class="intro__link">
+              <a href="recipees.html#veganRece" class="intro__link">
                 <div class="col-6 col-4-md">
                   <div class="intro__diet">
                     <img src="images/icons/vegan.png" alt="" class="intro__diet-icon">
@@ -68,7 +68,7 @@
                   </div>
                 </div>
               </a>
-              <a href="recipes.html#vegetarianRece" class="intro__link">
+              <a href="recipees.html#vegetarianRece" class="intro__link">
                 <div class="col-6 col-4-md">
                   <div class="intro__diet">
                     <img src="images/icons/vegetarian-diet.png" alt="" class="intro__diet-icon">
@@ -76,7 +76,7 @@
                   </div>
                 </div>
               </a>
-              <a href="recipes.html#paleoRece" class="intro__link">
+              <a href="recipees.html#paleoRece" class="intro__link">
                 <div class="col-6 col-4-md">
                   <div class="intro__diet">
                     <img src="images/icons/paleo.png" alt="" class="intro__diet-icon">
@@ -84,7 +84,7 @@
                   </div>
                 </div>
               </a>
-              <a href="recipes.html#pesceRece" class="intro__link">
+              <a href="recipees.html#pesceRece" class="intro__link">
                 <div class="col-6 col-4-md">
                   <div class="intro__diet">
                     <img src="images/icons/pescetarian.png" alt="" class="intro__diet-icon">
@@ -92,7 +92,7 @@
                   </div>
                 </div>
               </a>
-              <a href="recipes.html#detoxRece" class="intro__link">
+              <a href="recipees.html#detoxRece" class="intro__link">
                 <div class="col-6 col-4-md">
                   <div class="intro__diet">
                     <img src="images/icons/detox.png" alt="" class="intro__diet-icon">
