--- a/header.html
+++ b/header.html
@@ -39,7 +39,7 @@
             </li>
           </ul>
         </li>
-        <li class="navbar__li"><a href="recipes.html" class="navbar__link">Recipes</a></li>
+        <li class="navbar__li"><a href="recipees.html" class="navbar__link">Recipes</a></li>
         <li class="navbar__li"><a href="calculator.html" class="navbar__link">Calculator</a></li>
         <li class="navbar__li"><a href="about.html" class="navbar__link">About</a></li>
         <li class="navbar__li"><a href="contact.html" class="navbar__link">Contact</a></li>
